--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,47 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'images/logo.ico' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" crossorigin="anonymous" />
-    <title>Document</title>
+    <title>MedicCare</title>
 </head>
 <body>
+    <div class="wrapper" >
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+                <div class="col-sm" >
+                    <a class="navbar-brand flex-grow-1" id="icon-nav">
+                        <i class="fas fa-briefcase-medical" ></i>&nbsp;&nbsp;Medic Care
+                    </a>
+                </div>
+                <div class="col-sm" >
+                    <a href="#" class="btn btn-outline-info btn-sm border-light" id="btn-nav">Login</a>
+                </div>
+            </nav>
+        </header>
+
     {% block content %}
 
     {% endblock content %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    </div>
 
+    <footer class="bg-dark text-center text-lg-start text-light" id="footer" >
+        <div class="text-center p-3" id="footer--div">
+            Copyright &copy; {% now "Y" %} <span>All right reserved</span> ! Made with
+            <i class="text-danger fas fa-heartbeat" ></i> by
+            <a href="https://github.com/preciousimo" target="_blank" >Prochi</a>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="{% static 'js/scripts.js' %}" ></script>
 </body>
 </html>
