--- a/base/templates/base/frontend.html
+++ b/base/templates/base/frontend.html
@@ -1,5 +1,13 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
+<style>
+    body {
+        background: url("/static/images/med-3.jpg");
+        background-position: center 0px;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
 {% endblock content %}
