--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -1,15 +1,33 @@
 {% extends 'main.html' %}
 
-{% block nav %}
-<i class="fas fa-user"></i>&nbsp;&nbsp;Patients
-{% endblock nav %}
+{% block nav-content %}
+<i class="fas fa-hospital-user"></i>&nbsp;&nbsp;Patients
+{% endblock nav-content %}
 
 {% block btn-nav %}
 <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav">Logout</a>
 {% endblock btn-nav %}
 
 {% block content %}
+<div class="container">
+    <br><br>
+    <div class="d-flex justify-content-between">
+        <a href="{% url 'add_patient' %}" class="btn btn-outline-primary btn-sm">
+            <i class="fas fa-plus"></i>&nbsp;&nbsp; Add Patient
+        </a>
+        <span>
+            Welcome: <strong><span class="text-primary">{{ user.get_username }}</span></strong>
+        </span>
+    </div>
 
-<h1 class="text-danger text-center" >Backend Page!</h1>
-
+    {% for message in messages %}
+        {% if message.tags == 'success' %}
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script>
+            var m = "{{ message }}";
+            swal("Perfect !", m, "success")
+        </script>
+        {% endif %}
+    {% endfor %}
+</div>
 {% endblock content %}
