--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,12 @@
 /* General Configuration */
 html,body{
-    background: url("/static/images/med-3.jpg");
-    background-position: center 0px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
     height:100%;
     margin: 0;
     max-width: 100%;
     overflow: hidden;
 }
 
-/* Navbar */
-#icon-nav {
-    text-align: center; 
-    color: #fff; 
-    margin-left: 25px;
-}
+/* Navbar */ 
 #btn-nav {
     width: 90px;
     float: right;
@@ -32,18 +22,17 @@ html,body{
     height: 50px;
     font-size: 13px;
 }
-#footer--div {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-#footer--div > i {
-    font-size: 15px;
-}
-#footer--div > a {
-    color: #0dcaf0;
-    text-decoration: none;
-}
 
 /* Login */
 #btn-enter {
     width: 90px;
+}
+
+#heart{
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
 }
