--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="{% static 'images/logo.ico' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" />
     <title>MedicCare</title>
 </head>
 <body>
@@ -17,10 +17,10 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
                 <div class="col-sm" >
-                    <a class="navbar-brand flex-grow-1" id="icon-nav">
-                        {% block nav %}
+                    <a class="navbar-brand flex-grow-1" style="text-align: center; color: #fff; margin-left: 25px;">
+                        {% block nav-content %}
                         <i class="fas fa-briefcase-medical" ></i>&nbsp;&nbsp;Medic Care
-                        {% endblock nav %}
+                        {% endblock nav-content %}
                     </a>
                 </div>
                 <div class="col-sm" >
@@ -38,14 +38,21 @@
     </div>
 
     <footer class="bg-dark text-center text-lg-start text-light" id="footer" >
-        <div class="text-center p-3" id="footer--div">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             Copyright &copy; {% now "Y" %} <span>All right reserved</span> ! Made with
-            <i class="text-danger fas fa-heartbeat" ></i> by
-            <a href="https://github.com/preciousimo" target="_blank" >Prochi</a>
+            <i class="text-danger fas fa-heartbeat blink_me" style="font-size: 15px;" ></i> by
+            <a href="https://github.com/preciousimo" target="_blank" style="color: #0dcaf0; text-decoration: none;">Prochi</a>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}" ></script>
+
+    <script>
+        (function blink() {
+            $('.blink_me').fadeOut(1000).fadeIn(1000, blink);
+        })();
+    </script>
 </body>
 </html>
