Accessing patients individually

--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -1,48 +1,60 @@
 {% extends 'main.html' %}
 
+{% block nav-content %}
+<i class="fas fa-user-plus"></i>&nbsp;&nbsp;Add Patient
+{% endblock nav-content %}
+
+{% block btn-nav %}
+<a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav">Logout</a>
+{% endblock btn-nav %}
+
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="card card-body border-dark text-primary mt-5">
-                <span class="text-center">FILL OUT THE FORM BELOW</span>
+                <span class="text-center">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
             </div>
-            <form action="/add_patient" method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
+            <form action="/add_patient/" method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
                 {% csrf_token %}
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text">Name</span>
-                    <input type="text" class="form-control" name="name" placeholder="First and Last Name"/>
+                    <span class="input-group-text side-label">Name</span>
+                    <input type="text" class="form-control" name="name" placeholder="First and Last Name" {% block Value-name %} {% endblock Value-name %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text">Phone</span>
-                    <input type="phone" class="form-control" name="phone" placeholder="Patient phone"/>
+                    <span class="input-group-text side-label">Phone</span>
+                    <input type="phone" class="form-control" name="phone" placeholder="Patient phone" {% block Value-phone %} {% endblock Value-phone %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text">Email</span>
-                    <input type="email" class="form-control" name="email" placeholder="Patient email"/>
+                    <span class="input-group-text side-label">Email</span>
+                    <input type="email" class="form-control" name="email" placeholder="Patient email" {% block Value-email %} {% endblock Value-email %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text">Age</span>
-                    <input type="number" class="form-control" name="age" placeholder="Patient age"/>
+                    <span class="input-group-text side-label">Age</span>
+                    <input type="number" class="form-control" name="age" placeholder="Patient age" {% block Value-age %} {% endblock Value-age %}/>
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <label class="input-group-text">Gender</label>
+                    <label class="input-group-text side-label">Gender</label>
                     <select class="form-select" name="gender">
+                        {% block option %}
                         <option value="" hidden>Select the gender</option>
+                        {% endblock option %}
                         <option disabled></option>
                         <option>M</option>
                         <option>F</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="note" rows="7" placeholder="Description is optional..."></textarea>
+                    <textarea class="form-control" name="note" rows="7" placeholder="Description is optional...">{% block note %}{% endblock note %}</textarea>
                 </div>
                 <div class="d-grid gap-2 mt-2">
                     <button type="submit" class="btn btn-primary btn-sm">
+                        {% block Btn-add %}
                         <i class="fas fa-plus"></i>&nbsp;&nbsp;Add
+                        {% endblock Btn-add %}
                     </button>
-                    <a href="#" class="btn btn-dark btn-sm">
-                        <i class="fas fa-chevron-left"></i>Back
+                    <a href="{% url 'backend' %}" class="btn btn-dark btn-sm">
+                        <i class="fas fa-chevron-left"></i>&nbsp;&nbsp;Back
                     </a>
                 </div>
             </form>
