--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -15,7 +15,7 @@
             <div class="card card-body border-dark text-primary mt-5">
                 <span class="text-center">{% block card-title %} FILL OUT THE FORM BELOW {% endblock card-title %}</span>
             </div>
-            <form action="/add_patient/" method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
+            <form {% block Action %} action="/add_patient/" {% endblock Action %} method="POST" autocomplete="off" enctype="multipart/form-data" class="card p-3 border-dark mt-3">
                 {% csrf_token %}
                 <div class="input-group input-group-sm mb-3">
                     <span class="input-group-text side-label">Name</span>
@@ -57,6 +57,9 @@
                         <i class="fas fa-chevron-left"></i>&nbsp;&nbsp;Back
                     </a>
                 </div>
+
+                <!-- ID Hidden (denied here) -->
+                {% block Id-hidden %}{% endblock Id-hidden %}
             </form>
         </div>
     </div>
