--- a/base/templates/base/edit.html
+++ b/base/templates/base/edit.html
@@ -1,28 +1,44 @@
 {% extends 'base/add.html' %}
 
+<!-- Navbar content {icon + title} -->
 {% block nav-content %}
 <i class="fas fa-user-edit"></i>&nbsp;&nbsp; {{ patient.name }}
 {% endblock nav-content %}
 
+<!-- Card title {in add.html} extended here -->
 {% block card-title %}
 Registered at: <span class="text-dark">{{ patient.created_at | date:'d/m/Y (H:i)' }}</span>
 {% endblock card-title %}
 
+<!-- Add button extended here -->
 {% block Btn-add %}
 <i class="fas fa-add"></i>&nbsp;&nbsp;Save
 {% endblock Btn-add %}
 
+<!-- Add button extended here -->
+{% block Action %} action="/edit_patient/" {% endblock Action %}
 
+<!-- Block Form Action -->
 {% block Value-name %} value="{{ patient.name }}" {% endblock Value-name %}
 
+<!-- Phone number -->
 {% block Value-phone %} value="{{ patient.phone }}" {% endblock Value-phone %}
 
+<!-- Email -->
 {% block Value-email %} value="{{ patient.email }}" {% endblock Value-email %}
 
+<!-- Age -->
 {% block Value-age %} value="{{ patient.age }}" {% endblock Value-age %}
 
+<!-- Gender -->
 {% block option %}
 <option style="background-color: #d3d3d3; color: #007bff;">{{ patient.gender }}</option>
 {% endblock option %}
 
+<!-- Note -->
 {% block note %}{{ patient.note }}{% endblock note %}
+
+<!-- ID Hidden -->
+{% block Id-hidden %}
+<input type="hidden" value="{{ patient.id }}" name="id">
+{% endblock Id-hidden %}
