--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -57,7 +57,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="#" class="btn btn-danger" title="Delete patient">
+                    <a href="/delete_patient/{{ patient.id }}" class="btn btn-danger" title="Delete patient">
                         <li class="fas fa-trash-alt"></li>
                     </a>
                 </td>
