Message display if patient not foun

--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %} Add Patient {% endblock title %}
+
 {% block nav-content %}
 <i class="fas fa-user-plus"></i>&nbsp;&nbsp;Add Patient
 {% endblock nav-content %}
