--- a/base/templates/base/edit.html
+++ b/base/templates/base/edit.html
@@ -1,5 +1,7 @@
 {% extends 'base/add.html' %}
 
+{% block title %} Edit Patient {% endblock title %}
+
 <!-- Navbar content {icon + title} -->
 {% block nav-content %}
 <i class="fas fa-user-edit"></i>&nbsp;&nbsp; {{ patient.name }}
