--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,3 +40,11 @@ html,body{
 .side-label{
     width: 75px;
 }
+
+#no-data{
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-size: 22px;
+}
