--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -1,27 +1,44 @@
 {% extends 'main.html' %}
 
+<!-- Title on the Browser tab -->
 {% block title %} All Patients {% endblock title %}
 
+<!-- Navbar content {icon + title} -->
 {% block nav-content %}
 <i class="fas fa-hospital-user"></i>&nbsp;&nbsp;Patients
 {% endblock nav-content %}
 
+<!-- TIME -->
+{% block time %}
+<div class="col-sm">
+    <center>
+        <span id="clock" style="color: #89cff0;"></span>
+    </center>
+</div>
+{% endblock time %}
+
+<!-- Button in navbar -->
 {% block btn-nav %}
 <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav">Logout</a>
 {% endblock btn-nav %}
 
+<!-- Page Content -->
 {% block content %}
 <div class="container">
     <br><br>
+
+    <!-- Add button and Get username -->
     <div class="d-flex justify-content-between">
         <a href="{% url 'add_patient' %}" class="btn btn-outline-primary btn-sm">
             <i class="fas fa-plus"></i>&nbsp;&nbsp; Add Patient
         </a>
         <span>
             Welcome: <strong><span class="text-primary">{{ user.get_username }}</span></strong>
+            <!-- {% now "H:i:s" %} -->
         </span>
     </div>
 
+    <!-- Input Search + Button Search + Button Reset -->
     <form action="" method="GET">
         <div class="input-group input-group-sm mb-3 mt-4">
             <input type="text" name="q" class="form-control" placeholder="Search for..." value="{{ request.GET.q }}">
@@ -31,6 +48,7 @@
         </div>
     </form>
 
+    <!-- Table -->
     <center>
         <table class="table table-bordered table-sm mt-4" style="text-align: center; font-size: 14px;">
             <thead class="table-primary">
