--- a/templates/main.html
+++ b/templates/main.html
@@ -23,6 +23,10 @@
                         {% endblock nav-content %}
                     </a>
                 </div>
+                
+                <!-- Time {ROOT} -->
+                {% block time %}{% endblock time %}
+
                 <div class="col-sm" >
                     {% block btn-nav %}
                     <a href="{% url 'backend' %}" class="btn btn-outline-info btn-sm border-light" id="btn-nav">Login</a>
@@ -47,7 +51,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="{% static 'js/scripts.js' %}" ></script>
+    <script src="{% static 'js/main.js' %}" ></script>
 
     <script>
         (function blink() {
