Twerk footer color

--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -22,6 +22,9 @@
 <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav">Logout</a>
 {% endblock btn-nav %}
 
+<!-- Footer {color} -->
+{% block footer %} style="color: #89cff0; text-decoration: none;"{% endblock footer %}
+
 <!-- Page content -->
 {% block content %}
 <div class="container">
