--- a/base/templates/base/registration/login.html
+++ b/base/templates/base/registration/login.html
@@ -13,6 +13,9 @@
 <a href="{% url 'frontend' %}" class="btn btn-outline-primary btn-sm border-light text-light" id="btn-nav">Go back</a>
 {% endblock btn-nav %}
 
+<!-- Footer {color} -->
+{% block footer %} style="color: #a9a9a9; text-decoration: none;"{% endblock footer %}
+
 <!-- Page Content -->
 {% block content %}
 <div class="container mt-5">
