--- a/templates/main.html
+++ b/templates/main.html
@@ -35,20 +35,21 @@
             </nav>
         </header>
 
-    {% block content %}
+    <!-- Block content {ROOT} -->
+    {% block content %} {% endblock content %}
 
-    {% endblock content %}
+    </div> <!-- END // Wrapper -->
 
-    </div>
-
+    <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start text-light" id="footer" >
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             Copyright &copy; {% now "Y" %} <span>All right reserved</span> ! Made with
             <i class="text-danger fas fa-heartbeat blink_me" style="font-size: 15px;" ></i> by
-            <a href="https://github.com/preciousimo" target="_blank" style="color: #0dcaf0; text-decoration: none;">Prochi</a>
+            <a href="https://github.com/preciousimo" target="_blank" {% block footer %} style="color: #0dcaf0; text-decoration: none;"{% endblock footer %}>Prochi</a>
         </div>
     </footer>
 
+    <!-- Bootstrap & JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}" ></script>
