--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
 
-<!-- Title on thex Browser tab -->
+<!-- Title on the Browser tab -->
 {% block title %} Add Patient {% endblock title %}
 
 <!-- Navbar content {icon + title} -->
@@ -71,6 +71,10 @@
                         <i class="fas fa-plus"></i>&nbsp;&nbsp;Add
                         {% endblock Btn-add %}
                     </button>
+
+                    <!-- Reset button {in edit.html} denied here -->
+                    {% block Btn-reset %}{% endblock Btn-reset %}
+
                     <a href="{% url 'backend' %}" class="btn btn-dark btn-sm">
                         <i class="fas fa-chevron-left"></i>&nbsp;&nbsp;Back
                     </a>
