--- a/base/templates/base/add.html
+++ b/base/templates/base/add.html
@@ -19,7 +19,8 @@
 
 <!-- Button in navbar -->
 {% block btn-nav %}
-<a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav">Logout</a>
+<a class="btn btn-outline-danger btn-sm border-light text-light" id="btn-nav" data-toggle="modal"
+    data-target="#logoutModal">Logout</a>
 {% endblock btn-nav %}
 
 <!-- Footer {color} -->
