--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,56 +9,97 @@
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
     <link rel="shortcut icon" href="{% static 'images/logo.ico' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" />
     <title>{% block title %} Medic Care {% endblock title %}</title>
 </head>
+
 <body>
-    <div class="wrapper" >
+    <div class="wrapper">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
-                <div class="col-sm" >
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="col-sm">
                     <a class="navbar-brand flex-grow-1" style="text-align: center; color: #fff; margin-left: 25px;">
                         {% block nav-content %}
-                        <i class="fas fa-briefcase-medical" ></i>&nbsp;&nbsp;Medic Care
+                        <i class="fas fa-briefcase-medical"></i>&nbsp;&nbsp;Medic Care
                         {% endblock nav-content %}
                     </a>
                 </div>
-                
+
                 <!-- Time {ROOT} -->
                 {% block time %}{% endblock time %}
 
-                <div class="col-sm" >
+                <div class="col-sm">
                     {% block btn-nav %}
-                    <a href="{% url 'backend' %}" class="btn btn-outline-info btn-sm border-light" id="btn-nav">Login</a>
+                    <a href="{% url 'backend' %}" class="btn btn-outline-info btn-sm border-light"
+                        id="btn-nav">Login</a>
                     {% endblock btn-nav %}
                 </div>
             </nav>
         </header>
 
-    <!-- Block content {ROOT} -->
-    {% block content %} {% endblock content %}
+        <!-- Block content {ROOT} -->
+        {% block content %} {% endblock content %}
 
     </div> <!-- END // Wrapper -->
 
     <!-- Footer -->
-    <footer class="bg-dark text-center text-lg-start text-light" id="footer" >
+    <footer class="bg-dark text-center text-lg-start text-light" id="footer">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             Copyright &copy; {% now "Y" %} <span>All right reserved</span> ! Made with
-            <i class="text-danger fas fa-heartbeat blink_me" style="font-size: 15px;" ></i> by
-            <a href="https://github.com/preciousimo" target="_blank" {% block footer %} style="color: #0dcaf0; text-decoration: none;"{% endblock footer %}>Prochi</a>
+            <i class="text-danger fas fa-heartbeat blink_me" style="font-size: 15px;"></i> by
+            <a href="https://github.com/preciousimo" target="_blank" {% block footer %}
+                style="color: #0dcaf0; text-decoration: none;" {% endblock footer %}>Prochi</a>
         </div>
     </footer>
 
-    <!-- Bootstrap & JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="{% static 'js/main.js' %}" ></script>
+    <!-- Modal {Logout confirmation} -->
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="logoutModalLabel"><i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;Logout</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <span class="text-danger"><i class="fas fa-sign-out-alt fa-3x mt-4"></i></span>
+                <div class="mt-4 mb-4 text-danger">Are you sure you want to exit the system ?</div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
+                <a href="{% url 'logout' %}" type="button" class="btn btn-outline-danger btn-sm">Logout</a>
+            </div>
+        </div>
+    </div>
+</div>
 
+    <!-- Bootstrap & JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script>
         (function blink() {
             $('.blink_me').fadeOut(1000).fadeIn(1000, blink);
         })();
     </script>
 </body>
+
 </html>
