--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -38,6 +38,7 @@
         </a>
         <span>
             Welcome: <strong><span class="text-primary">{{ user.get_username }}</span></strong>
+            <!-- {% now "H:i:s" %} -->
         </span>
     </div>
 
