--- a/base/templates/base/backend.html
+++ b/base/templates/base/backend.html
@@ -82,7 +82,7 @@
                 </td>
                 <td>
                     <a class="btn btn-secondary" title="Delete patient"
-                        data-toggle="modal" data-target="#deleteModal{{ patient.pk }}">
+                        data-bs-toggle="modal" data-bs-target="#deleteModal{{ patient.pk }}">
                         <li class="fas fa-trash-alt"></li>
                     </a>
                 </td>
