--- a/base/templates/registration/login.html
+++ b/base/templates/registration/login.html
@@ -21,7 +21,7 @@
 <div class="container mt-5">
     <div class="card p-3 border-dark">
         <span class="btn btn-outline-dark mt-3"><i class="fas fa-lock"></i>&nbsp;&nbsp;RESTRICTED ACCESS</span>
-        <form action="{% url 'login' %}" method="POST" autocomplete="off" novalidate >
+        <form method="POST" autocomplete="off" novalidate >
             {% csrf_token %}
             <div class="input-group mb-3 mt-5">
                 <span class="btn input-group-text border-secondary bg-light icon-width"><i class="fas fa-user-alt"></i></span>
